--- a/style.css
+++ b/style.css
@@ -73,7 +73,7 @@ li a {
     background-color: #FFFFFF;
     border-radius: 10PX;
     padding: 40px;
-    
+
 }
 
 input {
@@ -83,11 +83,12 @@ input {
     border-radius: 5px;
     border: 1px solid wheat;
     padding-right: 40px;
-    text-indent: 10px;  /* move placeholder text slight right */
+    text-indent: 10px;
+    /* move placeholder text slight right */
 
 }
-.btn
-{
+
+.btn {
     height: 57.33px;
     width: 330px;
     background-color: #FEE2B3;
@@ -95,32 +96,30 @@ input {
     border-radius: 8px;
     margin-left: 22px;
     border: none;
-    
+
 }
-h3
-{
-    padding-right:0px;
+
+h3 {
+    padding-right: 0px;
 }
 
 /* Practise Area */
 
-.parent-main2
-{
+.parent-main2 {
     margin-top: 60px;
 }
-.law-type
-{
+
+.law-type {
     width: 80%;
     margin: 20px auto;
 }
-.default-image
-{
+
+.default-image {
     height: 50px;
     width: 50px;
 }
 
-.Bankruptcy    
-{
+.Bankruptcy {
     background-color: #f3f1edd7;
     height: 150px;
     width: 210px;
@@ -128,162 +127,237 @@ h3
     border-radius: px;
     margin-top: 20px;
     margin-left: 5px;
-    
+
 }
-.type
-{
+
+.type {
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
     gap: 30px;
 }
-.parent-h2
-{
+
+.parent-h2 {
     text-align: center;
     font-size: 32px;
-    
+
 }
-.parent-p
-{
+
+.parent-p {
     text-align: center;
     font-size: 16px;
     margin-top: 5px;
 }
- /* parent-main3 */
-.parent-main3
-{
+
+/* parent-main3 */
+.parent-main3 {
     display: flex;
     justify-content: space-evenly;
     width: 100%;
-   
+
     background-color: #f2f6f8;
     padding: 80px 0px;
     margin-top: 50px;
 }
-.two-images
-{
-  display: flex;
-  gap: 30px;
-  border-radius: 5px;
+
+.two-images {
+    display: flex;
+    gap: 30px;
+    border-radius: 5px;
 }
-.two-images img
-{
+
+.two-images img {
     width: 250px;
     height: auto;
-  
+
 }
-.legal-solution-heading h1
-{
+
+.legal-solution-heading h1 {
     font-size: 28px;
     color: #364D59;
     margin-top: 50px;
 }
 
-.legal-solution-heading p
-{
-    
+.legal-solution-heading p {
+
     margin-top: 15px;
 }
 
 
-.legal-solution-heading button
-{
-  margin-top: 30px;
+.legal-solution-heading button {
+    margin-top: 30px;
 }
-.legal-solution-heading span
-{
+
+.legal-solution-heading span {
     color: rgba(196, 77, 77, 0.733);
 }
-.legal-solution-title 
-{
+
+.legal-solution-title {
     color: #364D59;
     font-size: 16px;
 }
-.appoinmnet
-{
+
+.appoinmnet {
     height: 50px;
     width: 204px;
     background-color: #FEE2B3;
 
     border-radius: 5px;
     border: none;
-    
-   
+
+
 }
+
 /* customer rerview */
 
 /* Main container */
 .customer-reviews {
-  background-color: whitesmoke;
-  padding: 30px;
-  width: 100%;
-  margin: 20px auto;
-  border-radius: 10px;
-  text-align: center;
+    background-color: whitesmoke;
+    padding: 30px;
+    width: 100%;
+    margin: 20px auto;
+    border-radius: 10px;
+    text-align: center;
 }
 
 /* Heading */
 .customer-reviews h3 {
-  color: rgb(70, 25, 25);
-  font-size: 24px;
-  margin-bottom: 30px;
+    color: rgb(70, 25, 25);
+    font-size: 24px;
+    margin-bottom: 30px;
 }
 
 /* Flex container for review cards */
 .reviews-wrapper {
-  display: flex;
-  justify-content: center;
-  gap: 30px;
-  flex-wrap: wrap; /* Wrap to next line on small screens */
+    display: flex;
+    justify-content: center;
+    gap: 30px;
+    flex-wrap: wrap;
+    /* Wrap to next line on small screens */
 }
 
 /* Individual review card */
 .reviews {
-  background-color: #364D59;
-  width: 200px;
-  padding: 20px;
-  border-radius: 5px;
-  display: flex;
-  flex-direction: column;
-  gap: 15px;
-  color: white;
+    background-color: #364D59;
+    width: 200px;
+    padding: 20px;
+    border-radius: 5px;
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
+    color: white;
 }
 
 /* Profile section */
 .profile {
-  display: flex;
-  align-items: center;
-  gap: 10px;
+    display: flex;
+    align-items: center;
+    gap: 10px;
 }
 
 .profile img {
-  width: 50px;
-  height: 50px;
-  border-radius: 50%;
-  object-fit: cover;
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    object-fit: cover;
 }
 
 /* Name and title inside the card */
 .review {
-  display: flex;
-  flex-direction: column;
+    display: flex;
+    flex-direction: column;
 }
 
 .review .name {
-  font-size: 16px;
-  font-weight: bold;
-  color: #fff;
+    font-size: 16px;
+    font-weight: bold;
+    color: #fff;
 }
 
 .review .title {
-  font-size: 14px;
-  color: #ccc;
+    font-size: 14px;
+    color: #ccc;
 }
 
 
 .reviews p {
-  margin: 0;
-  font-size: 15px;
-  line-height: 1.5;
-  color: #fff;
+    margin: 0;
+    font-size: 15px;
+    line-height: 1.5;
+    color: #fff;
+}
+
+
+/*legal solution */
+.parent-main4 {
+    display: flex;
+    justify-content: space-evenly;
+    width: 100%;
+    margin: 30px auto;
+    background-color: #b8c4ca;
+    padding: 30px;
+    border-radius: 5px;
+    height: auto;
+}
+
+.parent-main4 img {
+    height: 300px;
+    width: 300px;
+}
+
+.legal-solutions {
+    padding-top: 20px;
+
+}
+
+.legal-solutions p {
+    padding-top: 10px;
+}
+
+/* footer */
+
+footer {
+    height: 500px;
+    width: 100%;
+    background-image: url(Image/hero_bg_footer.jpg);
+    background-size: cover;
+    background-position: center;
+    color: white;
+    padding: 40px;
+    display: flex;
+    justify-content: space-around;
+    align-items: flex-start;
+    gap: 20px;
+   
+}
+
+.about,
+.quick {
+    display: flex;
+    flex-direction: column;
+}
+
+.about h3,
+.quick h3 {
+    margin: 0;
+    padding: 0;
+}
+
+.quick ul {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+}
+
+.quick li {
+    margin: 0;
+    padding: 0;
+}
+
+.quick li a {
+    color: whitesmoke;
+    display: block;
+    text-decoration: none;
+    margin-bottom: 4px;
+    line-height: 1px;
 }
